Prevent stack if VirtualMachine known not to be available